[project]
name = "listing-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.1",
    "django-ninja>=1.5.3",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3.2",
    "python-decouple>=3.8",
    "redis>=7.1.0",
    "uvloop>=0.22.1",
]
